# allos-agent-sdk

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MVP_ROADMAP.md  POST_MVP_ROADMAP.md  README.md  ROADMAP.md  manual_fixes.txt  manual_test_agent.py  pyproject.toml  requirements-dev.txt  requirements.txt  rough.py  together_demo.txt
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  provider_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml  stargazers.yml
allos/: __init__.py  __version__.py
allos/agent/: __init__.py  agent.py
allos/cli/: interactive.py  logo.py  main.py
allos/context/: __init__.py  manager.py
allos/providers/: __init__.py  anthropic.py  base.py  chat_completions.py  metadata.py  openai.py  registry.py  utils.py
allos/tools/: __init__.py  base.py  registry.py
allos/tools/execution/: __init__.py  shell.py
allos/tools/filesystem/: __init__.py  directory.py  edit.py  read.py  write.py
allos/utils/: __init__.py  errors.py  file_utils.py  logging.py  modality_counter.py  token_counter.py
dev_logs/: 2025-10-31_phase-0-and-1.md  2025-11-01_phase-2.md  2025-11-01_phase-3.md  2025-11-02_phase-3.md  2025-11-02_phase-4.md  2025-11-02_phase-5.md  2025-11-03_phase-5.md  2025-11-03_phase-6.md  2025-11-03_phase-7.md  2025-12-03_PMVP_phase-2.md
docs/: getting-started.md  index.md  installation.md
docs/archive/: guide.md  initial-architecture-design.md
docs/contributing/: adding-providers.md  adding-tools.md  development.md  testing.md
docs/guides/: agents.md  configuration.md  custom-tools.md  openai-api-comparison.md  providers.md  quickstart.md  tools.md
docs/providers/: anthropic.md  chat-completions.md  ollama.md  openai.md
docs/reference/: agent-api.md  api-reference.md  cli-reference.md  guide.md  initial-architecture-design.md  metadata.md  provider-api.md  tool-api.md
examples/: agent_usage.py  basic_usage.py  cli_workflow.sh  code_review_agent.py  custom_tools.py  fast_inference.py  local_models.py  omnibus.py  omnibus_cli.sh  provider_switching.py  sre_debugging.py  tool_usage.py  universal_chat.py
scripts/: run_tests.sh  setup_dev.sh  update_stars.py
tests/: conftest.py
tests/e2e/: test_cli.py  test_real_tasks.py  test_system_integrity.py
tests/integration/: test_agent_workflow.py  test_provider_switching.py  test_session.py  test_tool_execution.py
tests/integration/providers/: test_anthropic_real.py  test_chat_completions_real.py  test_openai_real.py
tests/unit/: test_agent.py  test_agent_session.py  test_context.py  test_logo.py  test_providers.py  test_tools.py  test_utils.py
tests/unit/providers/: test_anthropic_provider.py  test_chat_completions_provider.py  test_metadata.py  test_openai_provider.py
tests/unit/tools/: test_base_tool.py  test_filesystem_tools.py  test_shell_tool.py
tests/unit/utils/: test_file_utils.py  test_logging.py  test_token_counter.py
